[package]
name = "rustycore-fr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
audiotags = "0.4.1"
skytable = "0.7.0-alpha.4"
dotenv = "0.15.0"
